--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "@google-cloud/storage": "^6.10.1",
     "@hapi/accept": "^6.0.1",
     "@hapi/hapi": "^21.3.2",
+    "@tensorflow/tfjs": "^4.6.0",
     "@tensorflow/tfjs-node": "^4.6.0",
     "bcrypt": "^5.1.0",
+    "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
