--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,14 +27,25 @@ jobs:
   deploy:
     # needs: build
     runs-on: ubuntu-latest
+    permissions:
+      contents: 'read'
+      id-token: 'write'
 
     steps:
-    - name: Set up Google Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0.4.3
+    - id: 'auth'
+      uses: 'google-github-actions/auth@v1'
       with:
-        version: '340.0.0'
-        project_id: capstone-project-c23-pc635
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
+        credentials_json: '${{ secrets.GCP_SA_KEY }}'
+
+    - name: 'Set up Cloud SDK'
+      uses: 'google-github-actions/setup-gcloud@v1'
+
+    # - name: Set up Google Cloud SDK
+    #   uses: google-github-actions/setup-gcloud@v0.4.3
+    #   with:
+    #     version: '340.0.0'
+    #     project_id: capstone-project-c23-pc635
+    #     service_account_key: ${{ secrets.GCP_SA_KEY }}
 
     - name: Deploy to App Engine
       run: gcloud app deploy --quiet
