--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,7 +25,7 @@ jobs:
     #   run: npm run build
 
   deploy:
-    # needs: build
+    needs: build
     runs-on: ubuntu-latest
     permissions:
       contents: 'read'
@@ -48,4 +48,4 @@ jobs:
     #     service_account_key: ${{ secrets.GCP_SA_KEY }}
 
     - name: Deploy to App Engine
-      run: gcloud app deploy --quiet
+      run: gcloud app deploy
