--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,10 @@
 runtime: nodejs20
+env: standard
 
-# automatic_scaling:
-#   target_cpu_utilization: 0.85
-#   min_instances: 1
-#   max_instances: 10
+automatic_scaling:
+  target_cpu_utilization: 0.85
+  min_instances: 1
+  max_instances: 10
 
 handlers:
   - url: /.*
